# nisc

./: .gitignore  LICENSE  README.md  pyproject.toml
flatmaps/: surface.py
nisc/: cifti.py  resample.py
tests/: test_resampler.py  test_surface.py
