[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nisc"
description = "Miscellaneous tools for neuroimaging data"
authors = [
    {name = "Connor Lane", email = "connor.lane858@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
dependencies = [
    "nibabel",
    "numpy",
    "pycortex",
    "scikit-learn",
    "scipy",
    "shapely",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ipython", "jupyter"]

[project.urls]
"Homepage" = "https://github.com/clane9/nisc"

[tool.setuptools_scm]
write_to = "nisc/_version.py"

[tool.setuptools.packages.find]
include = ["nisc*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
